# project

./: .gitignore  todolist.txt
Report/: Eval.tex  (+9 more)
code/: CMakeLists.txt  Makefile  Tree.hpp  TreeNode.hpp  cam_1_params.yml  cameraFPS.txt  cameraGL.cpp  cameraGLtest.cpp  cameraInput  cameraInput.cpp  camera_0_params.yml  cmake_install.cmake  contourCamera.cpp  contourFinder  contourFinder.cpp  contourFinder.hpp  drawOnContour.cpp  drawOnContour.hpp  heightMap.cpp  hierarchy.txt  houghLines  houghLines.cpp  landscapeCreator  landscapeCreator.cpp  mouseFunctionsGL.hpp  opencvtest  opencvtest.cpp  opengltest  opengltest.cpp  output.txt  testTerrainHierarchy.txt  times.txt  times_reduce.txt
code/OpenCV/opencv-2.4.11/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  cvconfig.h
code/OpenCV/opencv-2.4.11/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
code/aruco/: CMakeLists.txt  aruco_landscape.cpp  aruco_simple.cpp
code/aruco-1.2.5/src/: cameraparameters.cpp  marker.cpp
code/aruco-1.2.5/utils/: aruco_test_gl.cpp
code/contourImages/: info.txt
code/files/: camera.cpp  camera.hpp  contour.cpp  contour.hpp
code/scripts/: calibrateCamera.sh  check_close_clean.sh  check_close_script.sh  check_threshold.sh  check_threshold_clean.sh  opencv.sh
code/usertesting/: 1.txt  10.txt  10m.txt  11.txt  11m.txt  1m.txt  2.txt  2m.txt  3.txt  3m.txt  4.txt  4m.txt  5.txt  5m.txt  6.txt  6m.txt  7.txt  7m.txt  8.txt  8m.txt  9.txt  9m.txt
(+213 files in other folders)
